# wowlua-ls

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  RELEASE_NOTES.md  generate_classic_stubs.py  generate_global_stubs.py  rust-toolchain.toml
.claude/: ARCHITECTURE.md  NEOVIM_DIAGNOSTICS.md  TESTING.md
.claude/commands/: check.md  release-notes.md  spawn.md  vscode.md
.github/workflows/: docs.yml  release.yml
crates/wowlua_analysis/: Cargo.toml
crates/wowlua_analysis/src/: config.rs  lib.rs  xml_scan.rs
crates/wowlua_analysis/src/analysis/: build_ir.rs  checks.rs  deferred.rs  lower_expression.rs  mod.rs  narrowing.rs  prescan.rs  proptests.rs  resolve.rs  resolve_call.rs  semantic_tokens.rs
crates/wowlua_analysis/src/analysis/queries/: code_lens.rs  completion.rs  definition.rs  document_symbols.rs  format.rs  hover.rs  inlay_hints.rs  keyof.rs  mod.rs  nav.rs  references.rs  rename.rs  signature.rs
crates/wowlua_analysis/src/annotations/: annotation_scanning.rs  annotation_types.rs  mod.rs  scan_built_name.rs  scan_callback.rs  scan_defclass.rs  scan_globals.rs
crates/wowlua_analysis/src/diagnostics/: access.rs  annotation_metadata.rs  assign_type_mismatch.rs  ast_checks.rs  call_arity.rs  callback_events.rs  cannot_call.rs  class_shadows_builtin.rs  create_global.rs  destructure_arity.rs  discard_returns.rs  doc_field_no_class.rs  doc_func_no_function.rs  duplicate_index.rs  duplicate_set_field.rs  expression_type.rs  field_type_mismatch.rs  function_annotation_checks.rs  generic_constraint_mismatch.rs  grouped_return_mismatch.rs  incomplete_signature_doc.rs  inject_field.rs  invalid_op.rs  malformed_annotation.rs  missing_annotation.rs  missing_fields.rs  missing_return.rs  missing_return_value.rs  mixed_enum_values.rs  mod.rs  multi_return_projection.rs  need_check_nil.rs  nil_index.rs  nil_table_key.rs  not_precedence.rs  param_constraint_mismatch.rs  redefined_local.rs  redundant_condition.rs  redundant_logical.rs  return_mismatch.rs  (+16 more)
crates/wowlua_analysis/src/pre_globals/: build_on_stubs.rs  mod.rs  shared.rs
crates/wowlua_core/: Cargo.toml
crates/wowlua_doc/: Cargo.toml
crates/wowlua_doc/src/: doc_gen.rs  doc_gen_md.rs  lib.rs
crates/wowlua_lsp/: Cargo.toml
crates/wowlua_lsp/src/: lib.rs  lsp.rs
crates/wowlua_lsp/src/lsp/: diagnostics.rs  folding_range.rs  on_type.rs  selection_range.rs  uri.rs
crates/wowlua_lsp/src/lsp/main_loop/: code_actions.rs  conversions.rs  diagnostics_handlers.rs  handlers.rs  hierarchy.rs  mod.rs  rebuild.rs  refactor.rs  scan.rs  state.rs  stub_loading.rs  watchdog.rs
crates/wowlua_lsp/src/plugins/: mod.rs  query.rs  sandbox.rs
crates/wowlua_lsp/src/toc/: diagnostics.rs  mod.rs  queries.rs  schema.rs
crates/wowlua_stub_gen/: Cargo.toml
crates/wowlua_stub_gen/src/: lib.rs
crates/wowlua_stub_gen/src/stub_gen/: blizzard.rs  classic.rs  data_params.rs  framexml.rs  mod.rs  orchestrate.rs  sources.rs  tests.rs  util.rs  wiki.rs
crates/wowlua_syntax/: Cargo.toml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/guide/: adding-diagnostics.md  basic-annotations.md  builder-pattern.md  classes.md  cli.md  configuration.md  development.md  diagnostics.md  events.md  expressions.md  flavor-filtering.md  generics.md  getting-started.md  metatables.md  multi-return.md  nil-safety.md  plugins.md  stub-generation.md  testing.md  toc-files.md  type-guards.md  why-wowlua-ls.md  xml-scanning.md
docs/reference/: annotations.md  configuration.md  diagnostics.md
editors/jetbrains/: README.md  build.gradle.kts  settings.gradle.kts
editors/vscode/: .gitignore  .vscodeignore  LICENSE.md  README.md  extension.js  language-configuration.json  package-lock.json  package.json  wowluarc.schema.json
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_analysis/: alias.lua  annotated.lua  closures.lua
fuzz/corpus/fuzz_lexer/: comments.lua  simple.lua  strings.lua
fuzz/corpus/fuzz_parser/: control_flow.lua  function.lua  table.lua
fuzz/fuzz_targets/: fuzz_analysis.rs  fuzz_lexer.rs  fuzz_parser.rs
src/: annotations.rs  ast.rs  config.rs  diagnostics.rs  doc_gen.rs  doc_gen_md.rs  flavor.rs  lib.rs  lsp.rs  main.rs  pre_globals.rs  queries.rs  state.rs  stub_gen.rs  syntax.rs  types.rs  variables.rs  xml_scan.rs
src/analysis/: build_ir.rs  checks.rs  deferred.rs  lower_expression.rs  mod.rs  narrowing.rs  prescan.rs  queries.rs  resolve.rs  resolve_call.rs  semantic_tokens.rs
src/annotations/: annotation_scanning.rs  annotation_types.rs  mod.rs  scan_built_name.rs  scan_callback.rs  scan_defclass.rs  scan_globals.rs
src/cli/: check.rs  doc.rs  dump_stubs.rs  dump_types.rs  evaluate.rs  mod.rs  profile.rs  test_query.rs
src/diagnostics/: access.rs  annotation_metadata.rs  assign_type_mismatch.rs  ast_checks.rs  builds_field_not_self.rs  call_arity.rs  callback_events.rs  cannot_call.rs  circle_doc_class.rs  class_shadows_builtin.rs  code_after_break.rs  constructor_return.rs  count_down_loop.rs  create_global.rs  (+64 more)
stubs/: precomputed-files.bin.zst  precomputed-provenance.txt  precomputed.bin.zst
tests/: access-modifiers.lua  accessor-modifiers.lua  all-statements.lua  and-or-alias-narrow.lua  annotation-completion.lua  annotations.lua  array-element-supertype.lua  backtick-generic-completion.lua  backward-inference.lua  bracket-access-union-key.lua  bracket-index-completion.lua  branch-local-version.lua  builder-pattern.lua  call-func-generics.lua  call-hierarchy.lua  cast.lua  circle-doc-class.lua  class-shadows-builtin.lua  code-lens.lua  constructor-completion.lua  convergence.lua  correlated-locals.lua  count-down-loop.lua  deep-inheritance.lua  diagnostics.lua  document-highlight.lua  file-level-return-typed.lua  file-level-return.lua  framexml-missing-globals.lua  funcall-access.lua  fuzz-resolve-work-limit.lua  generics-projections-e2e.lua  generics-projections.lua  generics.lua  getobjecttype-narrows.lua  incomplete-signature-doc.lua  infinite-loop.lua  integration.lua  integration_stubs.lua  integration_test.rs  (+56 more)
(+615 files in other folders)
