[package]
name = "wowlua_ls"
version = "0.0.0"
repository = "https://github.com/TradeSkillMaster/wowlua_ls"
edition = "2024"
license = "GPL-3.0"

[dependencies]
rayon = "1.10"
line-numbers = "0.4.0"
crossbeam-channel = "0.5"
lsp-server = "=0.7.8"
lsp-types = "0.97.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3"
zstd = "0.13"
ureq = "2.10"
regex-lite = "0.1"
quick-xml = "0.37"
url = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
mimalloc = "0.1"
mlua = { version = "0.10", features = ["lua51", "vendored", "send"] }

[features]
default = ["embedded-stubs"]
embedded-stubs = []

# Release profile tuned for a latency-sensitive LSP server that also ships as
# downloadable release binaries. Numbers below are measured against a clean
# baseline (cargo defaults: opt-level=3, lto=false, codegen-units=1).
[profile.release]
opt-level = 3
# Thin LTO inlines/optimizes across crate boundaries (rayon, mlua, zstd, our
# own modules). It captures ~95% of fat-LTO's benefit at roughly half the build
# cost; measured fat-vs-thin here was only ~0.3 MB smaller for ~2.5x build time,
# so thin is the better tradeoff for a binary built on every release tag.
lto = "thin"
# Thin LTO already optimizes across codegen-unit boundaries, so the default
# codegen-units=1 only kills parallelism for marginal gain. 16 lets the backend
# parallelize code generation while LTO still cross-inlines.
codegen-units = 16
# Strip symbols from the shipped binary — the single biggest size win here
# (~3.8 MB), and these binaries are distributed, not debugged.
strip = true
# NOTE: deliberately NOT setting `panic = "abort"`. The LSP server relies on
# std::panic::catch_unwind (src/lsp/main_loop.rs warm-diagnostics thread and
# the profile/check subcommands in src/main.rs) to recover from analysis panics
# without taking down the whole server; aborting would break that resilience.
