[workspace]
members = [
    "crates/wowlua_syntax",
    "crates/wowlua_core",
    "crates/wowlua_analysis",
    "crates/wowlua_lsp",
    "crates/wowlua_stub_gen",
    "crates/wowlua_doc",
]
# cargo-fuzz crate: its own standalone build (nightly + libfuzzer), depends on the
# root facade. Excluded so it doesn't pull into normal workspace builds/tests.
exclude = ["fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/TradeSkillMaster/wowlua_ls"

[package]
name = "wowlua_ls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The bin is a thin facade + CLI on top of the library crates.
wowlua_syntax = { path = "crates/wowlua_syntax" }
wowlua_core = { path = "crates/wowlua_core" }
wowlua_analysis = { path = "crates/wowlua_analysis" }
wowlua_lsp = { path = "crates/wowlua_lsp", default-features = false }
wowlua_stub_gen = { path = "crates/wowlua_stub_gen", default-features = false }
wowlua_doc = { path = "crates/wowlua_doc" }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
line-numbers = "0.4.0"
lsp-types = "0.97.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
mimalloc = "0.1"
mlua = { version = "0.10", features = ["lua51", "vendored", "send"] }

[features]
default = ["embedded-stubs"]
# Forwards to every crate that reaches wowlua_lsp (which owns stub_loading.rs).
# All such deps are pulled with default-features = false, so a root
# `--no-default-features` build leaves the embedded blob out of every path and
# selects disk loading.
embedded-stubs = ["wowlua_lsp/embedded-stubs", "wowlua_stub_gen/embedded-stubs"]

# Release profile tuned for a latency-sensitive LSP server that also ships as
# downloadable release binaries. Numbers below are measured against a clean
# baseline (cargo defaults: opt-level=3, lto=false, codegen-units=1).
[profile.release]
opt-level = 3
# Thin LTO inlines/optimizes across crate boundaries (rayon, mlua, zstd, our
# own modules). It captures ~95% of fat-LTO's benefit at roughly half the build
# cost; measured fat-vs-thin here was only ~0.3 MB smaller for ~2.5x build time,
# so thin is the better tradeoff for a binary built on every release tag.
lto = "thin"
# Thin LTO already optimizes across codegen-unit boundaries, so the default
# codegen-units=1 only kills parallelism for marginal gain. 16 lets the backend
# parallelize code generation while LTO still cross-inlines.
codegen-units = 16
# Strip symbols from the shipped binary — the single biggest size win here
# (~3.8 MB), and these binaries are distributed, not debugged.
strip = true
# NOTE: deliberately NOT setting `panic = "abort"`. The LSP server relies on
# std::panic::catch_unwind (src/lsp/main_loop.rs warm-diagnostics thread and
# the profile/check subcommands in src/main.rs) to recover from analysis panics
# without taking down the whole server; aborting would break that resilience.
