[workspace]
members = [
    "crates/wowlua_syntax",
    "crates/wowlua_core",
    "crates/wowlua_analysis",
    "crates/wowlua_lsp",
    "crates/wowlua_stub_gen",
    "crates/wowlua_doc",
]
# cargo-fuzz crate: its own standalone build (nightly + libfuzzer), depends on the
# root facade. Excluded so it doesn't pull into normal workspace builds/tests.
exclude = ["fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/TradeSkillMaster/wowlua_ls"

# Single source of truth for the zero-warnings policy that was previously only a
# convention (see CLAUDE.md). Every member crate opts in with `lints.workspace =
# true`, so the policy lives here and applies workspace-wide. The `fuzz/` crate is
# excluded from the workspace and so does not (and cannot) inherit these.
[workspace.lints.rust]
# Deny the `warnings` group: every rustc warning is a hard error for member
# crates, so `cargo build`/`cargo test` enforce the policy, not just clippy.
# Because this also gates ordinary builds, the compiler is pinned in
# `rust-toolchain.toml` — otherwise a floating-stable update could surface a new
# default-on warning and break a build (including the CI release build).
warnings = "deny"

[workspace.lints.clippy]
# Baseline posture the tree already satisfied: the full `clippy::all` group
# (correctness + suspicious + style + complexity + perf). `priority = -1` applies
# the group first, so any narrower per-lint setting (e.g. a future deliberate
# `allow` of one `clippy::all` member) still wins over it.
all = { level = "deny", priority = -1 }
# A few pedantic lints promoted on top of the baseline. Each is mechanical and
# behavior-preserving, the tree is already clean under it, and a documented
# `#[allow]` can still opt out a justified site.
redundant_else = "deny"            # drop the `else` after a diverging `if` branch
stable_sort_primitive = "deny"     # `sort_unstable` on primitive slices: same result, faster
cloned_instead_of_copied = "deny"  # `.copied()` over `.cloned()` for `Copy` items

[package]
name = "wowlua_ls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# The bin is a thin facade + CLI on top of the library crates.
wowlua_syntax = { path = "crates/wowlua_syntax" }
wowlua_core = { path = "crates/wowlua_core" }
wowlua_analysis = { path = "crates/wowlua_analysis" }
wowlua_lsp = { path = "crates/wowlua_lsp", default-features = false }
wowlua_stub_gen = { path = "crates/wowlua_stub_gen", default-features = false }
wowlua_doc = { path = "crates/wowlua_doc" }
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
line-numbers = "0.4.0"
lsp-types = "0.97.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false }
mimalloc = "0.1"
mlua = { version = "0.10", features = ["lua51", "vendored", "send"] }

[features]
default = ["embedded-stubs"]
# Forwards to every crate that reaches wowlua_lsp (which owns stub_loading.rs).
# All such deps are pulled with default-features = false, so a root
# `--no-default-features` build leaves the embedded blob out of every path and
# selects disk loading.
embedded-stubs = ["wowlua_lsp/embedded-stubs", "wowlua_stub_gen/embedded-stubs"]

# Release profile tuned for a latency-sensitive LSP server that also ships as
# downloadable release binaries. Numbers below are measured against a clean
# baseline (cargo defaults: opt-level=3, lto=false, codegen-units=1).
[profile.release]
opt-level = 3
# Thin LTO inlines/optimizes across crate boundaries (rayon, mlua, zstd, our
# own modules). It captures ~95% of fat-LTO's benefit at roughly half the build
# cost; measured fat-vs-thin here was only ~0.3 MB smaller for ~2.5x build time,
# so thin is the better tradeoff for a binary built on every release tag.
lto = "thin"
# Thin LTO already optimizes across codegen-unit boundaries, so the default
# codegen-units=1 only kills parallelism for marginal gain. 16 lets the backend
# parallelize code generation while LTO still cross-inlines.
codegen-units = 16
# Strip symbols from the shipped binary — the single biggest size win here
# (~3.8 MB), and these binaries are distributed, not debugged.
strip = true
# NOTE: deliberately NOT setting `panic = "abort"`. The LSP server relies on
# std::panic::catch_unwind (src/lsp/main_loop.rs warm-diagnostics thread and
# the profile/check subcommands in src/main.rs) to recover from analysis panics
# without taking down the whole server; aborting would break that resilience.
