[package]
name = "wowlua_analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Exposes `#[cfg(test)]` construction helpers (ClassDecl/ExternalGlobal::for_test,
# PreResolvedGlobals::push_ext_*) to *other* crates' test builds, since plain
# `#[cfg(test)]` items don't cross a crate boundary. Enabled by the root crate's
# dev-dependency; never compiled into a production build.
test-util = []

[dependencies]
wowlua_core = { path = "../wowlua_core" }
rayon = "1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3"
lsp-types = "0.97.0"
quick-xml = "0.37"
log = "0.4"

[dev-dependencies]
# Property-based testing for the pure type algebra (assignability/union/narrowing).
proptest = "1"
