[package]
name = "wowlua_doc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wowlua_analysis = { path = "../wowlua_analysis" }

[dev-dependencies]
# The unit tests build a synthetic PreResolvedGlobals via the push_ext_* helpers,
# which are gated behind wowlua_analysis's test-util feature.
wowlua_analysis = { path = "../wowlua_analysis", features = ["test-util"] }
