[package]
name = "wowlua_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wowlua_analysis = { path = "../wowlua_analysis" }
rayon = "1.10"
line-numbers = "0.4.0"
crossbeam-channel = "0.5"
lsp-server = "=0.7.8"
lsp-types = "0.97.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = "1.3"
zstd = "0.13"
url = "2"
log = "0.4"
mlua = { version = "0.10", features = ["lua51", "vendored", "send"] }

[dev-dependencies]
# main_loop tests build ClassDecl via the test-util construction helper, gated
# behind wowlua_analysis's test-util feature (cfg(test) items don't cross crates).
wowlua_analysis = { path = "../wowlua_analysis", features = ["test-util"] }

[features]
# stub_loading.rs lives in this crate, so the feature does too. Default-on so
# this crate's own tests (which load the embedded blob) work standalone; the root
# crate depends on us with default-features=false and re-enables it through its
# own `embedded-stubs` feature, so a root `--no-default-features` build can still
# select the disk-loading path.
default = ["embedded-stubs"]
embedded-stubs = []
