[package]
name = "wowlua_stub_gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Pure pass-through to wowlua_lsp's embedded-stubs (stub_gen has no embed logic
# of its own). Default-on so standalone tests match wowlua_lsp; combined with the
# default-features=false dependency below, a root --no-default-features build can
# still turn embedding off through every path that reaches wowlua_lsp.
default = ["embedded-stubs"]
embedded-stubs = ["wowlua_lsp/embedded-stubs"]

[dependencies]
wowlua_lsp = { path = "../wowlua_lsp", default-features = false }
rayon = "1.10"
serde_json = "1.0.140"
bincode = "1.3"
zstd = "0.13"
ureq = "2.10"
regex-lite = "0.1"
url = "2"
log = "0.4"
